# 22s-pa02-amogus

./: CMakeLists.txt  README.md
Data Analysis/No Duplicates vs. Duplicated Performance/: No Duplicates vs. Duplicated Performance.xlsx
Data Analysis/Randomized vs. Sorted Performance/: Randomized vs. Sorted Performance.xlsx
Data Analysis/Size Vs Time/: Size Vs Time.xlsx
data/: small.txt
data/integer/1000/: 1000_0D_0S.txt  1000_0D_100S.txt  1000_0D_60S.txt  1000_20D_0S.txt  1000_40D_0S.txt
data/integer/10000/: 10000_0D_0S.txt  10000_0D_100S.txt  10000_0D_60S.txt  10000_20D_0S.txt  10000_40D_0S.txt
data/integer/100000/: 100000_0D_0S.txt  100000_0D_100S.txt  100000_0D_60S.txt  100000_20D_0S.txt  100000_40D_0S.txt
data/integer/5000/: 5000_0D_0S.txt  5000_0D_100S.txt  5000_0D_60S.txt  5000_20D_0S.txt  5000_40D_0S.txt
data/integer/50000/: 50000_0D_0S.txt  50000_0D_100S.txt  50000_0D_60S.txt  50000_20D_0S.txt  50000_40D_0S.txt
data/integer/500000/: 500000_0D_0S.txt  500000_0D_100S.txt  500000_0D_60S.txt  500000_20D_0S.txt  500000_40D_0S.txt
data/string/1000/: 1000_0D_0S.txt  1000_0D_100S.txt  1000_0D_60S.txt  1000_20D_0S.txt  1000_40D_0S.txt
data/string/10000/: 10000_0D_0S.txt  10000_0D_100S.txt  10000_0D_60S.txt  10000_20D_0S.txt  (+1 more)
output/: outfile.csv
src/: DrFontenotsFavoriteSorter.cpp  DrFontenotsFavoriteSorter.h  HeapSort.cpp  HeapSort.h  dataCreation.py  insertionSort.cpp  insertionSort.h  introSort.cpp  introSort.h  main.cpp  mergeSort.cpp  mergeSort.h  randomizedQuickSort.cpp  randomizedQuickSort.h  shellSort.cpp  shellSort.h  timSort.cpp  timSort.h
(+20 files in other folders)
